# Hermes-StackChan

./: .gitignore  AGENTS.md  README.ja.md  README.md
ai-server/: .env.example  Dockerfile  docker-compose.windows-native-ollama.yml  docker-compose.windows.yml  docker-compose.yml  package-lock.json  package.json
ai-server/src/: audio.ts  device_control.ts  hermes.ts  hermes_audio.ts  index.ts  llm.ts  local_vad.ts  media.ts  server.ts  session.ts  stackchan_mcp_server.ts  stt.ts  timing.ts  tools.ts  tts.ts
ai-server/test/: hermes_dashboard.test.ts  local_vad.test.ts  media.test.ts  session.test.ts  stackchan_mcp_server.test.ts
app/lib/: app_state.dart
app/lib/network/: urls.dart
app/lib/view/home/: settings.dart
app/lib/view/popup/: device_name_page.dart  select_blue_device.dart
docs/: robot-bridge-migration.md
docs/hermes-refactor/: 01-current-state-and-goals.md  02-firmware-autostart-display.md  03-mcp-tool-publication.md  04-natural-dialogue.md  05-test-plan.md  06-implementation-prompt.md  07-task-checklist.md  08-lcd-sd-spi-incident.md  09-cores3-shared-spi-safety.md  README.md
docs/skills/firmware-ui-sim/: SKILL.md
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cpp
firmware/main/apps/: apps.h
firmware/main/apps/app_ai_agent/: app_ai_agent.cpp  app_ai_agent.h
firmware/main/apps/app_avatar/: app_avatar.cpp  app_avatar.h
firmware/main/apps/app_dance/: app_dance.cpp
firmware/main/apps/app_launcher/: app_launcher.cpp  app_launcher.h
firmware/main/apps/app_launcher/view/: screensaver.cpp
firmware/main/apps/app_setup/: app_setup.cpp
firmware/main/apps/app_setup/workers/: ai_agent.cpp  connectivity.cpp  sd_config_worker.cpp  servo.cpp  startup.cpp  workers.h
firmware/main/hal/: hal.cpp  hal.h  hal_ble.cpp  hal_mcp.cpp  hal_sdcard.cpp  hal_servo.cpp
firmware/main/hal/board/: hal_bridge.cc  hal_bridge.h  stackchan.cc  stackchan_camera.cc  stackchan_camera.h  stackchan_display.cc  stackchan_display.h
firmware/main/hal/drivers/FTServo_Arduino/src/: SCSCL.cpp
firmware/main/hal/utils/sd_config/: sd_config.cpp  sd_config.h
firmware/main/hal/utils/secret_logic/: secret_logic.cpp
firmware/main/hal/vision/: face_tracker_service.cpp  face_tracker_service.h
firmware/main/stackchan/avatar/skins/default/: default.cpp  speech_bubble.cpp
firmware/main/stackchan/modifiers/: face_tracking.h  head_pet.h  imu.h  modifiers.h  speaking.h
firmware/main/stackchan/motion/: motion.cpp  motion.h
firmware/patches/: esp-ml307-tcp-shutdown.patch  xiaozhi-esp32.patch
firmware/sdcard/: config.sample.json
firmware/tools/ui_sim/: CMakeLists.txt  README.md  avatar_scene.cpp  avatar_scene.h  hal_stub.cpp  hal_stub.h  lv_conf.h  main.cpp  scenario_runner.cpp  scenario_runner.h
firmware/tools/ui_sim/scenarios/: app_not_ready_regression.json  avatar_smoke.json  chat_bubble_regression.json  combined_overlay_regression.json  emotion_cycle.json  hermes_app_launch_regression.json  lifecycle_regression.json  modifier_stability.json  notification_regression.json  preview_image_regression.json  status_cycle.json
firmware/tools/ui_sim/stubs/hal/: hal.h
remote/code/: .gitignore
scripts/: clean-ui-sim.sh  run-ui-sim.sh
server/: README.MD
server/api/device/: device.go
server/api/device/v2/: device.go
server/internal/cmd/: cmd.go
server/internal/controller/device/: device_v2_unbind_device.go
server/internal/controller/stackchandevice/: stackchandevice_v2_unbind_device.go
server/manifest/config/: config.yaml
